# pybatchexecute

./: CHANGELOG.md  LICENSE  README.md  pydoc-markdown.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  release.yml  test.yaml  test.yml
docs/: README.md  README.rst  api.md  conf.py  response-formats.md
gbatchexecute/: __init__.py  core.py  decode.py  encode.py  test_core.py  test_decode.py  test_encode.py
pybatchexecute/: __init__.py  encode.py  test_decode.py  test_encode.py
