[tool.poetry]
name = "gbatchexecute"
version = "0.1.0"
description = "Library to ease interactions with Google's batchexecute batch RPC system"
authors = ["Pierre Nicolas Durette <pndurette@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
pydoc-markdown = "^3.10.0"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose --cov"

[tool.coverage.run]
source = ["gbatchexecute"]
omit = ["**/test_*.py"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
